# FinPref-Align

./: .gitignore  AGENTS.md  FinPref-Align_Qwen2.5-3B_SFT-DPO-GRPO_Codex_Spec_v3.md  README.md  Record.md  TODO.md  pyproject.toml  requirements.txt
configs/: dpo_qwen2_5_3b_lora.yaml  dpo_qwen2_5_3b_lora_p1_public.yaml  dpo_qwen2_5_3b_lora_p1_public_v2.yaml  dpo_qwen2_5_3b_lora_p1_public_v3.yaml  dpo_qwen2_5_3b_lora_p1_public_v4.yaml  dpo_qwen2_5_3b_lora_p1_public_v5.yaml  dpo_qwen2_5_3b_lora_p1_public_v6.yaml  eval.yaml  grpo_qwen2_5_3b_lora.yaml  grpo_reward_ablation.yaml  judge.yaml  judge_deepseek.yaml  sft_qwen2_5_3b_lora.yaml  sft_qwen2_5_3b_lora_p1_public.yaml
reports/: final_report.md  p1_public_v6_failure_spotcheck.md  p1_public_v6_rule_summary.md  resume_bullets.md
scripts/: 00_build_seed_data.py  01_generate_sft_data.py  02_generate_preference_pairs.py  03_generate_grpo_prompts.py  04_build_eval_data.py  04_validate_data.py  05_train_sft.sh  06_train_dpo.sh  07_train_grpo.sh  08_run_eval.sh  09_run_ablation.sh  10_merge_lora.sh  12_eval_p0_models.sh  13_run_p1_beta_sweep.sh  13_summarize_p1_sweep.py  14_run_deepseek_judge_p1_sample.sh  14_run_deepseek_judge_sample.sh  14_summarize_deepseek_judge.py  15_prepare_public_finance_data.py  16_run_p1_public_sft_dpo.sh  17_run_deepseek_judge_v2.sh  17_summarize_p1_public_v2.py  18_spotcheck_p1_public_v2_failures.py  19_summarize_p1_public_v3.py  20_inspect_v4_repair_data.py  21_summarize_p1_public_v4.py  22_inspect_v5_repair_data.py  23_summarize_p1_public_v5.py  24_run_p1_public_v5_dpo.sh  _bootstrap.py  (+3 more)
(+66 files in other folders)
