[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finpref-align"
version = "0.1.0"
description = "Financial preference alignment project with SFT, DPO, GRPO, rule evaluation, and badcase analysis."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "transformers==4.51.3",
  "trl==0.17.0",
  "peft==0.15.2",
  "accelerate==1.6.0",
  "datasets==3.6.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
train = ["bitsandbytes>=0.43"]
eval = ["openai>=1.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
